--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        applicationId "com.skuledev.skuleapp.skule_app"
+        applicationId "com.skuledev.SkuleApp"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
