--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
-        applicationId "com.skuledev.SkuleApp"
+        applicationId "com.skuledev.skuleapp.skule_app"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
